update reviews modesl and bugd in front end

--- a/app/views/admin/Dashboard.html
+++ b/app/views/admin/Dashboard.html
@@ -204,7 +204,7 @@
                   </div>
                 </div>
                 <script>
-                    function rejection() {
+                    function rejection(id) {
                      
                       var xhr = new XMLHttpRequest();
                       xhr.open("POST", "/bd-admin/review/reject", true)
