--- a/app/views/admin/edit.html
+++ b/app/views/admin/edit.html
@@ -11,6 +11,7 @@
             Let us show you what compassionate care truly means.">
         <link rel="icon" ype="image/png" href="/static/assets/favicon.png">
         <link rel="stylesheet" href="/static/css/main.css">
+        <link rel="stylesheet" href="/static/css/admin-panel.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.5.3/cleave.min.js"></script>
         <title>{{.Title}}</title>
         <script src="/static/js/main.js"></script>
@@ -104,6 +105,9 @@
             .IsAdmin {
                 display: none;
             }
+            .IsSuperUser {
+                display: none;
+            }
             
             #events li {
                 color: white;
@@ -117,30 +121,6 @@
                 display: none;
             }
             
-            .star.stars {
-                font-size: 40px;
-                width: 25px;
-                cursor: default;
-            }
-            
-            .star {
-                visibility: hidden;
-                font-size: 50px;
-                width: 50px;
-                color: gold;
-                cursor: pointer;
-            }
-            
-            .star:before {
-                content: "\2606";
-                position: absolute;
-                visibility: visible;
-            }
-            
-            .star:checked:before {
-                content: "\2605";
-                position: absolute;
-            }
         </style>
             {{$user := print .User.FirstName " " .User.LastName}}
             <nav class="uk-navbar-container" uk-navbar>
@@ -162,6 +142,21 @@
             <div class="uk-flex-center uk-flex">
                 <form class="uk-padding uk-grid-small" uk-grid action="/bd-admin/user/{{.User.Model.ID}}/edit" method="POST">
                     <div class="uk-width-1-2">
+                        <div class="uk-inline uk-width-1-1">
+                            <input class="uk-input" type="text" placeholder="{{if .User.Title }}{{.User.Title}}{{else}}Job Title{{end}}" name="title">
+                        </div>
+                    </div>
+                    <div class="uk-width-1-2">
+                        <div class="uk-inline uk-width-1-1">
+                            <input class="uk-input" type="text" placeholder="years of employement" name="years">
+                        </div>
+                    </div>
+                    <div class="uk-width-1-2">
+                        <div class="uk-inline uk-width-1-1">
+                           <input class="uk-input" type="text" placeholder="short work related bio" name="bio">
+                        </div>
+                    </div>
+                    <div class="uk-width-1-2">
                         <div class="uk-inline uk-width-1-1"><span class="uk-form-icon" uk-icon="icon: user"></span>
                             <input class="uk-input" type="text" placeholder="{{.User.FirstName}}" name="first_name">
                         </div>
@@ -169,25 +164,6 @@
                     <div class="uk-width-1-2">
                         <div class="uk-inline uk-width-1-1">
                             <input class="uk-input" type="text" placeholder="{{.User.LastName}}" name="last_name">
-                        </div>
-                    </div>
-                    <div class="uk-width-1-2">
-                        <div class="uk-inline uk-width-1-1">
-                            <input class="input-phone uk-input" type="tel"
-
-                                placeholder="{{if .User.Phone }}{{.User.Phone}}{{else}}Phone Number{{end}}" name="phone" pattern="^(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]\d{3}[\s.-]\d{4}$">
-                            <script>
-                                var cleave = new Cleave('.input-phone', {
-                                    numericOnly: true,
-                                    blocks: [0, 3, 0, 3, 4],
-                                    delimiters: ["(", ")", " ", "-"]
-                                });
-                            </script>
-                        </div>
-                    </div>
-                    <div class="uk-width-1-2">
-                        <div class="uk-inline uk-width-1-1">
-                            <input class="uk-input" type="text" placeholder="{{if .User.Title }}{{.User.Title}}{{else}}Job Title{{end}}" name="title">
                         </div>
                     </div>
                     <div class="uk-width-1-2">
@@ -200,15 +176,37 @@
                             <input class="uk-input" type="password" placeholder="password" name="password">
                         </div>
                     </div>
+                   
                     <div class="uk-width-1-2">
                         <div class="uk-inline uk-width-1-1">
-                            <input class="uk-checkbox" type="checkbox" name="admin">
-                            <label class="checkboxes" for="admin">Admin</label><span class="IsAdmin">{{.User.IsAdmin}}</span></div>
+                            <input class="input-phone uk-input" type="tel"
+                                placeholder="{{if .User.Phone }}{{.User.Phone}}{{else}}Phone Number{{end}}" name="phone" pattern="^(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]\d{3}[\s.-]\d{4}$">
+                            <script>
+                                var cleave = new Cleave('.input-phone', {
+                                    numericOnly: true,
+                                    blocks: [0, 3, 0, 3, 4],
+                                    delimiters: ["(", ")", " ", "-"]
+                                });
+                            </script>
+                        </div>
                     </div>
                     <div class="uk-width-1-2">
                         <div class="uk-inline uk-width-1-1">
-                            <input class="uk-checkbox" type="checkbox" name="editor">
-                            <label class="checkboxes" for="editor">Editor</label><span class="IsEditor">{{.User.IsEditor}}</span></div>
+                            <input class="uk-input" type="text" placeholder="short work related bio" name="">
+                        </div>
+                    </div>
+                     <div class="uk-width-1-1" uk-grid>
+                        <div class="uk-width-1-3">
+
+                                <input class="uk-checkbox" type="checkbox" name="is_super_user">
+                                <label class="checkboxes" for="Super User">Super User</label>
+                                <span class="IsSuperUser">{{.User.IsSuperUser}}</span>
+                                <input class="uk-checkbox" type="checkbox" name="admin">
+                                <label class="checkboxes" for="admin">Admin</label><span class="IsAdmin">{{.User.IsAdmin}}</span>
+                                <input class="uk-checkbox" type="checkbox" name="editor">
+                                <label class="checkboxes" for="editor">Editor</label><span class="IsEditor">{{.User.IsEditor}}</span>
+                           
+                        </div>
                     </div>
                     <div class="uk-width-1-3">
                         <input class="uk-input" type="submit">
