--- a/app/views/admin/show-user.html
+++ b/app/views/admin/show-user.html
@@ -12,7 +12,7 @@
         <link rel="icon" ype="image/png" href="/static/assets/favicon.png">
         <link rel="stylesheet" href="/static/css/main.css">
         <title>{{.Title}}</title>
-        <script src="/static/js/main.js"></script>
+        
         <script src="/static/js/stars.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
         <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
@@ -21,6 +21,7 @@
          <link rel="stylesheet"" href="/static/css/admin-panel.css">
         <link rel="stylesheet"" href="/static/css/stars.css">
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133675222-1"></script>
+        <script src="/static/js/main.js"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
 
@@ -74,7 +75,7 @@
               </li>
             </ul>
           </div>
-          <div class="uk-navbar-center">
+          <div class="uk-navbar-center uk-width-1-1">
             <div class="uk-navbar-center-left uk-visible@m">
               <ul class="uk-navbar-nav">
 
@@ -113,7 +114,7 @@
                 
 
 
-            <div class="uk-padding"></div>
+            <div class="uk-padding"><span class="uk-badge">{{.User.Title}}</span></div>
             <div class="uk-width-1-1 uk-padding">
                 <h2 class="uk-heading-line uk-text-center"><span>Approved Reviews</span></h2>
             </div>
