--- a/public/css/ratingbar.css
+++ b/public/css/ratingbar.css
@@ -10,9 +10,9 @@
 
 .ratingbar_wrapper_custom {
 	width: 100;
-	height: 20px;
-	background-color: #ccc;
-	border: 1px rgba(90, 86, 86, 0.5) solid;
+	height: 30px;
+	background-color: #f8f8f8;
+	border: 1px rgba(90, 86, 86, 0.1) solid;
 	overflow: hidden;
 }
 
@@ -25,8 +25,9 @@
 
 .ratingbar_inner_custom {
 	width: 0px;
-	height: 20px;
+	height: 30px;
 	border: 5px white;
+	box-shadow: 1px 1px 2px rgba(12, 12, 12, 0.3);
 	background-color: #22baf3;
 }
 
@@ -37,6 +38,16 @@
 	padding-top: 5px;
 	width: 125px;
 }
+.ratingbar_text_custom {
+	color: white;
+	font-size: 1em;
+	font-family: 'Open Sans', sans-serif;
+	padding-left: 5px;
+	line-height: 30px;
+	vertical-align: middle;
+	width: 125px;
+}
+
 
 
 /* EXAMPLE 2 - WEB 2.0 - ADVANCED CONFIGURATION */
