--- a/app/views/admin/change_password.html
+++ b/app/views/admin/change_password.html
@@ -10,66 +10,28 @@
         <meta name="description" content="We have been serving the Central Valley community for over a decade, and our commitment to providing the highest quality care shows in every patient we serve.
             Let us show you what compassionate care truly means.">
         <link rel="icon" ype="image/png" href="/static/assets/favicon.png">
-        <link rel="stylesheet" href="/static/css/main.css">
+        
         <title>{{.Title}}</title>
-        <script src="/static/js/main.js"></script>
-        <script>
-        var tag = document.createElement('script');
-        tag.src = "https://www.youtube.com/iframe_api";
-        var firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+          <!-- forgin imports -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.5.3/cleave.min.js"></script> for phone numbers -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
+    {{/* <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.3/js/uikit.min.js"></script> */}}
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133675222-1"></script>
+    <!-- forgin imports end -->
 
-        function onYouTubeIframeAPIReady() {
-            player = new YT.Player('player', {
-                events: {
-                    onReady: function(event) {
-                        //- var embedCode = event.target.getVideoEmbedCode()
-                        //- event.target.unMute()
-                        event.target.setVolume(100)
-                    }
-                }
-            })
-        }
-    </script>
-        <!-- Facebook Pixel Code -->
-        <script>
-        ! function(f, b, e, v, n, t, s) {
-            if (f.fbq) return;
-            n = f.fbq = function() {
-                n.callMethod ?
-                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n;
-            n.push = n;
-            n.loaded = !0;
-            n.version = '2.0';
-            n.queue = [];
-            t = b.createElement(e);
-            t.async = !0;
-            t.src = v;
-            s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }(window, document, 'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '2048222891932812');
-        fbq('track', 'PageView');
-    </script>
-        <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=2048222891932812&amp;ev=PageView&amp;noscript=1"></noscript>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133675222-1"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-133675222-1');
-    </script>
-        <!-- End Facebook Pixel Code -->
+    
+    <!-- local imports -->
+    <link rel="icon" ype="image/png" href="/static/assets/favicon.png">
+    <link rel="stylesheet" href="/static/css/admin-panel.css">
+    <link rel="stylesheet" href="/static/css/stars.css">
+    <script type="text/javascript" src="/static/js/stars.js"></script>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/ratingbar.css" />
+    <script type="text/javascript" src="/static/js/main.js"></script>
+    <!-- local imports end -->
     </head>
-
     <body>
         <div class="uk-offcanvas-content" uk-height-viewport="expand:true">
             <div id="offcanvas" uk-offcanvas="mode: push">
@@ -110,9 +72,6 @@
                 </nav>
             </div>
             <style>
-            #events li {
-                color: white;
-            }
         </style>
             <div class="uk-width-1-1 uk-padding">
                 <h1 class="uk-text-center uk-heading-line"><span>Change Password</span></h1></div>
