--- a/app/views/admin/edit.html
+++ b/app/views/admin/edit.html
@@ -8,39 +8,27 @@
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" viewport-fit="cover">
         <meta name="description" content="We have been serving the Central Valley community for over a decade, and our commitment to providing the highest quality care shows in every patient we serve.
-            Let us show you what compassionate care truly means.">
+            Let us show you what compassionate care truly means.">        
+        <!-- forgin imports -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.5.3/cleave.min.js"></script> <!-- for phone numbers -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
+        {{/* <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.3/js/uikit.min.js"></script> */}}
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133675222-1"></script>
+        <!-- forgin imports end -->
+
+        
+        <!-- local imports -->
+         <link rel="stylesheet"" href="/static/css/admin-panel.css">
+        <link rel="stylesheet"" href="/static/css/stars.css">
+        <script src="/static/js/stars.js"></script>
         <link rel="icon" ype="image/png" href="/static/assets/favicon.png">
         <link rel="stylesheet" href="/static/css/main.css">
-        <link rel="stylesheet" href="/static/css/admin-panel.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.5.3/cleave.min.js"></script>
-        <title>{{.Title}}</title>
         <script src="/static/js/main.js"></script>
-        <!-- Facebook Pixel Code -->
-        <script>
-            ! function(f, b, e, v, n, t, s) {
-                if (f.fbq) return;
-                n = f.fbq = function() {
-                    n.callMethod ?
-                        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-                };
-                if (!f._fbq) f._fbq = n;
-                n.push = n;
-                n.loaded = !0;
-                n.version = '2.0';
-                n.queue = [];
-                t = b.createElement(e);
-                t.async = !0;
-                t.src = v;
-                s = b.getElementsByTagName(e)[0];
-                s.parentNode.insertBefore(t, s)
-            }(window, document, 'script',
-                'https://connect.facebook.net/en_US/fbevents.js');
-            fbq('init', '2048222891932812');
-            fbq('track', 'PageView');
-        </script>
-        <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=2048222891932812&amp;ev=PageView&amp;noscript=1"></noscript>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133675222-1"></script>
+        <!-- local imports end -->
+
+
+        <title>{{.Title}}</title>
         <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -93,35 +81,6 @@
                     </div>
                 </nav>
             </div>
-            <style>
-            .checkboxes {
-                padding: 10px;
-            }
-            
-            .IsEditor {
-                display: none;
-            }
-            
-            .IsAdmin {
-                display: none;
-            }
-            .IsSuperUser {
-                display: none;
-            }
-            
-            #events li {
-                color: white;
-            }
-            
-            .stars {
-                padding-bottom: 25px;
-            }
-            
-            .hidden {
-                display: none;
-            }
-            
-        </style>
             {{$user := print .User.FirstName " " .User.LastName}}
             <nav class="uk-navbar-container" uk-navbar>
                 <div class="uk-navbar-left uk-margin-right">
