--- a/app/views/admin/signin.html
+++ b/app/views/admin/signin.html
@@ -93,75 +93,61 @@
                 </div>
             </nav>
         </div>
-    </div>
-</div>
-        <style>
-            #events li {
-                color: white;
-            }
-            .uk-notification {
-                background-color: #3cc2f1;
-                box-shadow: 2px 2px 5px rgba(0,0,0,0.4);
-                border-radius: 5px;
-            }
-        </style>
+            {{if .Flashes}}
+                {{$CURRENT := GetFlashes .Flashes}}
+                {{range $CURRENT}}
+                    {{if eq .Type "Danger"}}
+                        <script>
+                            UIkit.notification("<notifier><span style='padding-right: 15px;' uk-icon='icon: warning'></span>{{.Message}}<notifier>", {status:'primary'});
+                        </script>
+                    {{end}}
+                {{end}}
+                {{$CURRENT := GetNewestFlashes .Flashes}}
+                {{range $CURRENT}}
+                    {{if eq .Type "Password"}}
+                        <script>
+                            UIkit.notification("<span style='padding-right: 15px;' uk-icon='icon: warning'></span>{{.Message}}", {status:'warning'});
+                        </script>
+                    {{end}}
+                {{end}}
+            {{end}}
         <div uk-height-viewport="offset-bottom: 0">
             <div class="uk-padding uk-flex-center uk-flex">
-            <div class="uk-card  uk-card-primary uk-border-rounded" style="box-shadow: 0 2px 10px rgba(0,0,0,0.5);">
-            <form class="uk-form uk-panel uk-panel-box" action="/bd-admin/signin" method="POST">
-                    <div class="uk-card-head uk-padding" style="border-bottom: 1px solid rgba(0,0,0,0.2);">
-                            <h4 class="uk-text-middle"><span class="uk-card-title">SIGN IN</span></h4>
-                    </div>
-                    <div class="uk-card-body" style="border-bottom: 1px solid rgba(0,0,0,0.2);display: flex;">
-                    <div class="uk-width-1-1  uk-form-controls" id="emailScreen">
-                    {{if .Flashes}}
-                        {{$CURRENT := GetFlashes .Flashes}}
-                        {{range $CURRENT}}
-                            {{if eq .Type "Danger"}}
-                                <script>
-                                    UIkit.notification("<notifier><span style='padding-right: 15px;' uk-icon='icon: warning'></span>{{.Message}}<notifier>", {status:'primary'});
-                                </script>
-                            {{end}}
-                        {{end}}
-                        {{$CURRENT := GetNewestFlashes .Flashes}}
-                        {{range $CURRENT}}
-                            {{if eq .Type "Password"}}
-                                <script>
-                                    UIkit.notification("<span style='padding-right: 15px;' uk-icon='icon: warning'></span>{{.Message}}", {status:'warning'});
-                                </script>
-                            {{end}}
-                        {{end}}
-                    {{end}}
-                        {{/* <label for="email" style="padding-left: 20px;">Email: </label> */}}
-                                <div class="uk-width-1-1 uk-inline">
-                                    <span class="uk-form-icon" uk-icon="icon: mail"></span>
-                                    <input class="uk-input" style="border-radius: 20px;" type="text" placeholder="Enter email" name="email" required>
-                                    <span class="uk-icon-button nextStep" uk-icon="arrow-right" style="position: absolute; background: #39f; top: 2px; right: 2px;border: solid 1px powderblue;" onClick="switcherNext()"></span>
-                                </div>
-                    </div>
-                    <br>
-                    <div class="uk-width-1-1" id="passwordScreen">
-                        <div class="uk-form-controls">
-                            {{/* <label for="password" style="padding-left: 20px;">Password: </label> */}}
-                            <div class="uk-inline uk-width-1-1">
-                            <span class="uk-form-icon" uk-icon="icon: unlock"></span>
-                            <input class="uk-input" style="border-radius: 20px;" type="password" placeholder="Enter Password" name="password" required>
+                <div class="uk-card  uk-card-primary uk-border-rounded" style="box-shadow: 0 2px 10px rgba(0,0,0,0.5);">
+                    <form class="uk-form uk-panel uk-panel-box" action="/bd-admin/signin" method="POST">
+                        <div class="uk-card-head uk-padding" style="border-bottom: 1px solid rgba(0,0,0,0.2);">
+                                <h4 class="uk-text-middle"><span class="uk-card-title">SIGN IN</span></h4>
+                        </div>
+                        <div class="uk-card-body" style="border-bottom: 1px solid rgba(0,0,0,0.2);">
+                            <div class="uk-width-1-1  uk-form-controls" id="emailScreen">
+                            {{/* <label for="email" style="padding-left: 20px;">Email: </label> */}}
+                            <div class="uk-width-1-1 uk-inline">
+                                <span class="uk-form-icon" uk-icon="icon: mail"></span>
+                                <input class="uk-input" style="border-radius: 20px;" type="text" placeholder="Enter email" name="email" required>
+                                <span class="uk-icon-button nextStep" uk-icon="arrow-right" style="position: absolute; background: #39f; top: 2px; right: 2px;border: solid 1px powderblue;" onClick="switcherNext()"></span>
                             </div>
                         </div>
-                        
-                    </div>
-                    </div>
-                    <div class="uk-card-footer uk-margin-top">
-                        {{$CURRENT := GetNewestFlashes .Flashes}}
-                        {{range $CURRENT}}
-                            {{if eq .Type "Warning"}}
-                                <p class="uk-text-muted uk-text-meta">Login attempts: <span class="uk-label uk-label-default">{{.Message}}</span></p>
+                        <br>
+                        <div class="uk-width-1-1" id="passwordScreen">
+                            <div class="uk-form-controls">
+                                {{/* <label for="password" style="padding-left: 20px;">Password: </label> */}}
+                                <div class="uk-inline uk-width-1-1">
+                                    <span class="uk-form-icon" uk-icon="icon: unlock"></span>
+                                    <input class="uk-input" style="border-radius: 20px;" type="password" placeholder="Enter Password" name="password" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="uk-card-footer uk-margin-top">
+                            {{$CURRENT := GetNewestFlashes .Flashes}}
+                            {{range $CURRENT}}
+                                {{if eq .Type "Warning"}}
+                                    <p class="uk-text-muted uk-text-meta">Login attempts: <span class="uk-label uk-label-default">{{.Message}}</span></p>
+                                {{end}}
                             {{end}}
-                        {{end}}
                         <div class="uk-width-1-1 uk-form-controls uk-inline">
                             <div class="uk-align-left" style="margin-bottom: 0;">
-                                 <label><input class="uk-checkbox" type="checkbox" name="remember_me"> Remember me?</label>
-                                 <p class="uk-text-meta"><a href="/bd-admin/user/forgot">Forgot Username/password</a></p>
+                                    <label><input class="uk-checkbox" type="checkbox" name="remember_me"> Remember me?</label>
+                                    <p class="uk-text-meta"><a href="/bd-admin/user/forgot">Forgot Username/password</a></p>
                             </div>
                             <div class="uk-inline uk-align-right" style="margin-bottom: 0;">
                                 <span class="uk-form-icon" uk-icon="icon: sign-in"></span>
@@ -169,15 +155,13 @@
                             </div>
                         </div>
                     </div>
-                </form> 
-            </div>
-
+                </div>  
+            </form> 
         </div>
     </div>
-</div>
+
                         
                         <script>
-                             
                              var email = document.querySelector('#emailScreen')
                              var submit = document.querySelector('#signup_button')
                              var password = document.querySelector('#passwordScreen')
@@ -243,12 +227,15 @@
                         <div class="uk-width-1-3@m uk-width-1-1@s">
                             <a href="https://www.bbb.org/us/ca/fresno/profile/home-health-care/compassionate-care-home-health-agency-llc-1066-89049202/#sealclick" target="_blank" rel="nofollow"><img src="https://seal-cencal.bbb.org/seals/blue-seal-120-61-bbb-89049202.png" style="border: 0;" alt="Compassionate Care Home Health Agency, LLC BBB Business Review" /></a>
                         </div>
-                        <div class="uk-width-1-3@m uk-width-1-1@s"><img src="/static/assets/ACHC-logo-65.png" style="margin-top:10px;"></div>
+                        <div class="uk-width-1-3@m uk-width-1-1@s"><img src="/static/assets/ACHC-logo-65.png" style="margin-top:10px;">
+                        </div>
                     </div>
                 </div>
             </div>
         </footer>
     </div>
+    </div>
+
 </body>
 
 </html>
